--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="app.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="assets/css/app.css" />
     <title>Reverse String</title>
   </head>
   <body>
@@ -9,6 +11,6 @@
     <input type="text" placeholder="Enter a string" id="inputString" />
     <button onclick="reverseString()">Reverse String</button>
     <p id="result"></p>
-    <script src="app.js"></script>
+    <script src="assets/js/app.js"></script>
   </body>
 </html>
